--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "graphviz>=0.20.3",
     "matplotlib>=3.10.0",
     "networkx",
+    "numba>=0.61.0",
     "numpy",
     "pandas",
     "pygraphviz>=1.14",
