--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click>=8.2.1",
+    "flask>=3.1.1",
     "graphviz>=0.20.3",
+    "lmdb>=1.6.2",
     "matplotlib>=3.10.0",
     "networkx",
     "numba>=0.61.0",
