--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,39 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "crn-py"
+name = "alchemy"
 version = "0.1.0"
-description = "Add your description here"
+description = "A tool for exploring chemical space and generating chemical reaction networks."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
     "click>=8.2.1",
-    "flask>=3.1.1",
-    "graphviz>=0.20.3",
-    "lmdb>=1.6.2",
-    "matplotlib>=3.10.0",
-    "networkx",
-    "numba>=0.61.0",
-    "numpy",
-    "pandas",
-    "pygraphviz>=1.14",
-    "rdkit>=2024.9.4",
-    "scipy>=1.15.1",
+    "graphviz>=0.21",
+    "lmdb>=1.7.3",
+    "matplotlib>=3.10.5",
+    "networkx>=3.5",
+    "numba>=0.61.2",
+    "numpy>=2.2.6",
+    "pandas>=2.3.2",
+    "rdkit>=2025.3.5",
+    "rxnmapper[rdkit]>=0.4.2",
+    "scipy>=1.16.1",
     "tqdm>=4.67.1",
 ]
+
+[dependency-groups]
+dev = [
+    "flask>=3.1.2",
+]
+
+[project.scripts]
+alchemy = "alchemy:main"
+
+[tool.setuptools]
+py-modules = ["alchemy"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+
