--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"[python]": {
 		"editor.insertSpaces": false,
 		"editor.tabSize": 4,
-		"editor.detectIndentation": false
-	}
+		"editor.detectIndentation": true
+	},
+	"editor.insertSpaces": true
 }
