--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ dependencies = [
     "rxnmapper[rdkit]>=0.4.2",
     "scipy>=1.16.1",
     "tqdm>=4.67.1",
+    "ase",
+    "tblite[ase]",
+    "meson>=1.10.0",
+    "ninja>=1.13.0",
+    "scikit-build-core>=0.11.6",
 ]
 
 [dependency-groups]
